# advent-of-code-2022

./: .eslintrc  .gitignore  README.md  get-highscore-list.sh  get-today.sh  package.json  pnpm-lock.yaml  pyproject.toml  scorePrinter.ts
src/: common.ts  get-data.js
src/1/: a.js  b.js
src/10/: ab.py
src/11/: ab.py
src/12/: ab.py
src/13/: ab.py
src/14/: ab.py
src/15/: a.py  b.py
src/16/: a.py  b.py  misc.py  worker.py
src/17/: a.py
src/18/: a.py  b.py
src/2/: a.js  b.js
src/20/: a.py  b.py
src/21/: a.py  b.py
src/22/: ab.py
src/23/: a.py  ab.py  b.py
src/24/: ab.py
src/25/: a.py
src/3/: a.js  b.js
src/4/: a.py
src/5/: ab.py
src/6/: ab.py
src/7/: a-fail.py  ab.py
src/8/: ab.py
src/9/: ab.py  printgrid.py
