[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = ""
authors = ["Ola Flisbäck <ola.flisback@gmail.com>"]
readme = "README.md"
packages = [{include = "advent_of_code_2022"}]

[tool.poetry.dependencies]
python = "^3.10"
advent-of-code-data = "^1.3.0"
numpy = "^1.23.5"
networkx = "^2.8.8"
parse = "^1.19.0"
black = "^22.10.0"
matplotlib = "^3.6.2"
pygame = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
